Fixed the colour issue in dark mode in contact page

--- a/styles.css
+++ b/styles.css
@@ -1073,9 +1073,8 @@ body.dark .contact-container {
   box-shadow: 0.3rem 0.3rem 0.3rem rgba(255, 255, 255, 0.365);
 }
 
-body.contact.dark {
-  background: var(--background-image);
-  background-repeat: no-repeat;
+body.dark .contact {
+   background: url("images/bgdark.png") no-repeat center center;
   background-size: cover;
   background-position: center;
 }
